--- a/index.html
+++ b/index.html
@@ -30,15 +30,72 @@
         </ul>
     </header>
 
-    <!--Home-->
+    <!--Home/Above the fold-->
     <section class="home" id="home">
         <div class="home-text">
-            <h1>Full Website</h1>
+            <h1>Delicious</h1>
             <h2>Most Delicious Foods <br> in Your Area</h2>
-            <a href="#" class="btn">Today's Menu</a>
+            <a href="#" class="btn">Our Menu</a>
         </div>
         <div class="home-img">
             <img src="img/hero-image.png" alt="hero">
+        </div>
+    </section>
+
+    <!--About-->
+    <section class="about" id="about">
+        <div class="about-img">
+            <img src="img/about.png" alt="about">
+        </div>
+        <div class="about-text">
+            <span>About Us</span>
+            <h2>The best food in <br> our kitchen world</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Aliquam auctor bibendum blandit. Nulla dignissim eros in rhoncus commodo.
+                Sed tempus fringilla est quis eleifend.
+            </p>
+            <a href="#" class="btn">Explore Menu</a>
+        </div>
+    </section>
+
+    <!--Menu-->
+    <section class="menu" id="menu">
+        <div class="heading">
+            <span>Our menu</span>
+            <h2>Good taste follow by good price</h2>
+        </div>
+        <div class="menu-container">
+            <!--The Menus-->
+            <div class="box">
+                <div class="box-img">
+                    <img src="img/food-1.png" alt="food-1">
+                </div>
+                <h2>Fish Souper Hero</h2>
+                <h3>Tasty Food</h3>
+                <span>Rp25.000</span>
+                <i class='bx bx-cart'></i>
+            </div>
+
+            <div class="box">
+                <div class="box-img">
+                    <img src="img/food-2.png" alt="food-1">
+                </div>
+                <h2>Orang Juice Hawaiian</h2>
+                <h3>Tasty Drink</h3>
+                <span>Rp18.000</span>
+                <i class='bx bx-cart'></i>
+            </div>
+
+            <div class="box">
+                <div class="box-img">
+                    <img src="img/food-3.png" alt="food-1">
+                </div>
+                <h2>Ice Creamy Milkita</h2>
+                <h3>Tasty Food</h3>
+                <span>Rp23.000</span>
+                <i class='bx bx-cart'></i>
+            </div>
         </div>
     </section>
 </body>
