--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="box-img">
                     <img src="img/food-2.png" alt="food-1">
                 </div>
-                <h2>Orang Juice Hawaiian</h2>
+                <h2>Orange Juice Hawaiian</h2>
                 <h3>Tasty Drink</h3>
                 <span>Rp18.000</span>
                 <i class='bx bx-cart'></i>
@@ -96,6 +96,13 @@
                 <span>Rp23.000</span>
                 <i class='bx bx-cart'></i>
             </div>
+        </div>
+    </section>
+
+    <!--Services-->
+    <section class="service" id="service">
+        <div>
+            
         </div>
     </section>
 </body>
