--- a/index.html
+++ b/index.html
@@ -100,9 +100,30 @@
     </section>
 
     <!--Services-->
-    <section class="service" id="service">
-        <div>
-            
+    <section class="services" id="services">
+        <div class="heading">
+            <span>Services</span>
+            <h2>We provide best quality food</h2>
+        </div>
+
+        <div class="service-container">
+            <div class="s-box">
+                <img src="img/s1.png" alt="cake-n-drink">
+                <h3>Cheapest Snack Pack</h3>
+                <p>There are many variants of cake and drink by lorem ipsum dolor sir amet, quentin tarantino yogur.</p>
+            </div>
+
+            <div class="s-box">
+                <img src="img/s2.png" alt="cake-n-drink">
+                <h3>Sweet Cakes</h3>
+                <p>There are many variants of cake and drink by lorem ipsum dolor sir amet, quentin tarantino yogur.</p>
+            </div>
+
+            <div class="s-box">
+                <img src="img/s3.png" alt="cake-n-drink">
+                <h3>All Menu Variant</h3>
+                <p>There are many variants of cake and drink by lorem ipsum dolor sir amet, quentin tarantino yogur.</p>
+            </div>
         </div>
     </section>
 </body>
