--- a/index.html
+++ b/index.html
@@ -126,5 +126,11 @@
             </div>
         </div>
     </section>
+
+    <!--Call to Action-->
+    <section class="cta">
+        <h2>The best of the best <br> was us</h2>
+        <a href="#" class="btn">Order Food</a>
+    </section>
 </body>
 </html>
